Fixed jumpy boxes due to line-breaking and vertical-alignment

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ body {
   background-size: cover;
   align-items: center;
   justify-content: center;
+  vertical-align: middle;
   font-size: 2em;
   font-weight: 700;
   color: white;
